pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingObjectAmendDefDelimiter2.pkl
foo {
  bar {
    x = 1
}
